updated settings, bug fixes, added topbar for windows

--- a/src/renderer/scss/main.css
+++ b/src/renderer/scss/main.css
@@ -1,6 +1,268 @@
-@import url(/Users/pixl/Documents/SoundglassEngine/src/renderer/scss/tabs.css);
-@import url(/Users/pixl/Documents/SoundglassEngine/src/renderer/scss/icons.css);
-@import url(/Users/pixl/Documents/SoundglassEngine/src/renderer/scss/settings.css);
+@import url(/Users/pixl/Documents/SoundglassEngine/src/renderer/scss/topbar.css);
+.tabList {
+  width: 100vw;
+  min-height: 100%;
+}
+
+.tab {
+  width: 100vw;
+  height: 50px;
+  border-bottom: 1px solid rgba(20, 20, 20, 0.3);
+  line-height: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  -webkit-animation: fadeIn 0.4s;
+          animation: fadeIn 0.4s;
+  cursor: pointer;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+  -webkit-transition: opacity ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
+}
+
+.tab:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.tab#settings {
+  border: none;
+}
+
+.tab.removed {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
+}
+
+.tab .shortcut {
+  float: right;
+  color: #b4b4b4;
+}
+
+.tab .shortcut:hover {
+  color: white;
+}
+
+.tab .title {
+  float: left;
+  outline: none;
+  border: none;
+  pointer-events: none;
+}
+
+.tab .timer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  color: #787878;
+  pointer-events: none;
+}
+
+.tab .progress {
+  width: 0;
+  height: 2px;
+  border-radius: 1px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#ff27db), to(#9911e7));
+  background-image: linear-gradient(to right, #ff27db, #9911e7);
+  display: none;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+}
+
+.tab.active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.tab.active .progress {
+  display: block;
+}
+
+.tab#newTab {
+  border: none;
+  font-size: 20px;
+  color: #b4b4b4;
+  font-family: 'Quicksand';
+}
+
+.arrow {
+  border: solid #b4b4b4;
+  display: inline-block;
+  padding: 3px;
+  border-width: 0 2px 2px 0;
+  -webkit-transition: -webkit-transform ease-in-out 0.1s;
+  transition: -webkit-transform ease-in-out 0.1s;
+  transition: transform ease-in-out 0.1s;
+  transition: transform ease-in-out 0.1s, -webkit-transform ease-in-out 0.1s;
+}
+
+.arrow.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.arrow.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+#settingsContent {
+  width: 100vw;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  text-align: center;
+  padding-left: 75px;
+  padding-right: 75px;
+  height: 0;
+  opacity: 0;
+  -webkit-transition: opacity ease-in-out 0.2s, height ease-in-out 0.2s, -webkit-transform ease-in-out 0.2s;
+  transition: opacity ease-in-out 0.2s, height ease-in-out 0.2s, -webkit-transform ease-in-out 0.2s;
+  transition: transform ease-in-out 0.2s, opacity ease-in-out 0.2s, height ease-in-out 0.2s;
+  transition: transform ease-in-out 0.2s, opacity ease-in-out 0.2s, height ease-in-out 0.2s, -webkit-transform ease-in-out 0.2s;
+}
+
+#settingsContent .category {
+  width: 100%;
+  height: auto;
+  text-align: left;
+  border-left: 1px solid transparent;
+  padding: 15px;
+}
+
+#settingsContent .category .desc {
+  font-size: 14px;
+  width: 100%;
+  text-align: left;
+  display: inline-block;
+  color: #b4b4b4;
+}
+
+#settingsContent .category#input {
+  border-color: rgba(100, 100, 100, 0.8);
+}
+
+#settingsContent .category#output1 {
+  border-color: rgba(80, 80, 80, 0.8);
+}
+
+#settingsContent .category#output2 {
+  border-color: rgba(60, 60, 60, 0.8);
+}
+
+#settingsContent .category .explanation {
+  font-size: 15px;
+  color: #787878;
+}
+
+#settingsContent .category label {
+  width: 20px;
+  height: 20px;
+  outline: none;
+  background-color: rgba(40, 40, 40, 0.8);
+  border-radius: 3px;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 18px;
+  vertical-align: middle;
+  margin-left: 3px;
+  text-align: center;
+  font-size: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+#settingsContent .category input[type="checkbox"]:checked + label {
+  font-size: 14px;
+}
+
+#settingsContent .category input[type="checkbox"]:hover + label {
+  background-color: rgba(60, 60, 60, 0.8);
+}
+
+#settingsContent .category input[type="checkbox"] {
+  display: none;
+}
+
+#settingsContent .category input[type="range"] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  outline: none;
+  background-color: rgba(40, 40, 40, 0.8);
+  border-radius: 20px;
+  height: 5px;
+  cursor: pointer;
+}
+
+#settingsContent .category select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  outline: none;
+  padding: 5px;
+  background-color: rgba(40, 40, 40, 0.8);
+  border-radius: 3px;
+  border: none;
+  color: #787878;
+  cursor: pointer;
+  -webkit-transition: color ease-in-out 0.03s;
+  transition: color ease-in-out 0.03s;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+#settingsContent .category select:hover {
+  color: #b4b4b4;
+}
+
+#settingsContent .category ::-webkit-slider-thumb {
+  -webkit-appearance: none;
+          appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 20px;
+  background-color: #787878;
+  cursor: pointer;
+}
+
+#settingsContent .category ::-webkit-slider-thumb:hover {
+  background-color: #b4b4b4;
+}
+
+#settingsContent #credits {
+  color: #787878;
+  height: 25px;
+  width: 100%;
+  line-height: 27px;
+}
+
+#settingsContent #credits .link {
+  cursor: pointer;
+  border-bottom: 1px solid transparent;
+}
+
+#settingsContent #credits .link:hover {
+  -o-border-image: linear-gradient(to right, #ff27db, #9911e7);
+     border-image: -webkit-gradient(linear, left top, right top, from(#ff27db), to(#9911e7));
+     border-image: linear-gradient(to right, #ff27db, #9911e7);
+  border-image-slice: 1;
+}
+
+#settingsContent.active {
+  opacity: 1;
+  height: 510px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  padding-top: 15px;
+}
+
+#settingsContent h1 {
+  font-size: 22px;
+}
+
 @font-face {
   font-family: "Quicksand";
   src: url("../../assets/Quicksand-Regular.ttf");
@@ -22,7 +284,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(20, 20, 20, 0.2);
+  background-color: rgba(50, 50, 50, 0.2);
 }
 
 @-webkit-keyframes fadeIn {
@@ -59,5 +321,5 @@ body {
   -webkit-user-select: none;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
 }
