--- a/src/renderer/scss/tabs.css
+++ b/src/renderer/scss/tabs.css
@@ -9,6 +9,7 @@
   border-bottom: 1px solid rgba(20, 20, 20, 0.3);
   line-height: 50px;
   padding-left: 15px;
+  padding-right: 15px;
   -webkit-animation: fadeIn 0.4s;
           animation: fadeIn 0.4s;
   cursor: pointer;
@@ -16,6 +17,11 @@
   text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
+  position: relative;
+  -webkit-transition: opacity ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s, -webkit-transform ease-in-out 0.4s;
 }
 
 .tab:hover {
@@ -26,11 +32,15 @@
   border: none;
 }
 
+.tab.removed {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
+}
+
 .tab .shortcut {
   float: right;
   color: #b4b4b4;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .tab .shortcut:hover {
@@ -44,16 +54,24 @@
   pointer-events: none;
 }
 
+.tab .timer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  color: #787878;
+  pointer-events: none;
+}
+
 .tab .progress {
   width: 0;
   height: 2px;
   border-radius: 1px;
-  background-image: -webkit-gradient(linear, left top, right top, from(blue), to(purple));
-  background-image: linear-gradient(to right, blue, purple);
+  background-image: -webkit-gradient(linear, left top, right top, from(#ff27db), to(#9911e7));
+  background-image: linear-gradient(to right, #ff27db, #9911e7);
   display: none;
   position: absolute;
   left: 0;
-  margin-top: 49px;
+  bottom: -1px;
 }
 
 .tab.active {
