--- a/src/renderer/scss/topbar.scss
+++ b/src/renderer/scss/topbar.scss
@@ -3,17 +3,20 @@
 #topbar {
     display: none;
     width: 100vw;
-    height: 25px;
-    background-color: rgb(30, 30, 30);
+    height: 22px;
+    background-color: rgb(23, 23, 23);
     -webkit-app-region: drag;
     user-select: none;
     border-bottom: 1px solid $color-background;
     font-family: 'Segoe MDL2 Assets';
     text-align: right;
-    position: relative;
-    line-height: 25px;
+    position: fixed;
+    line-height: 22px;
     color: $color-text-darker;
     font-size: 0;
+    z-index: 1000000;
+    top: 0;
+    left: 0;
 
     &.active {
         display: block;
@@ -25,7 +28,7 @@
         text-align: center;
         display: inline-block;
         vertical-align: middle;
-        font-size: 15px;
+        font-size: 9px;
         -webkit-app-region: no-drag;
 
         &:hover {
